--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Findstate - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Affinity Homes</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -9,7 +9,7 @@
     />
 
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+      href="https://fonts.googleapis.com/css?family=Jost:300,400,500,700&family=Allison;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
 
@@ -37,7 +37,7 @@
       id="ftco-navbar"
     >
       <div class="container">
-        <a class="navbar-brand" href="index.html">Findstate</a>
+        <a class="navbar-brand" href="index.html">Affinity Homes</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -92,7 +92,9 @@
         >
           <div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-end">
             <div class="text text-center w-100">
-              <h1 class="mb-4">Find Properties <br />That Make You Money</h1>
+              <h1 class="mb-4" style="font-family: Allison">
+                Find Properties <br />That Make You Money
+              </h1>
               <p>
                 <a href="#" class="btn btn-primary py-3 px-4"
                   >Search Properties</a
@@ -1204,7 +1206,7 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Findstate</h2>
+              <h2 class="ftco-heading-2">Affinity Homes</h2>
               <p>
                 Far far away, behind the word mountains, far from the countries.
               </p>
@@ -1338,10 +1340,7 @@
               <script>
                 document.write(new Date().getFullYear());
               </script>
-              All rights reserved | This template is made with
-              <i class="icon-heart color-danger" aria-hidden="true"></i> by
-              <a href="https://colorlib.com" target="_blank">Colorlib</a>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              Designed by Musasoft Labs
             </p>
           </div>
         </div>
