--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
               style="background-image: url(images/listing-1.jpg)"
             >
               <div class="location">
-                <span class="rounded">New York, USA</span>
+                <span class="rounded">New York, Nairobi</span>
               </div>
               <div class="text">
                 <h3><a href="#">100 Property Listing</a></h3>
