--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                   >
                     <div
                       class="img-2 rounded-circle"
-                      style="background-image: url(images/agent-1.jpg)"
+                      style="background-image: url(images/gladys.jpg)"
                     ></div>
                     <h3 class="mb-0 ml-2">Gladys</h3>
                   </a>
@@ -329,7 +329,7 @@
                   >
                     <div
                       class="img-2 rounded-circle"
-                      style="background-image: url(images/agent-1.jpg)"
+                      style="background-image: url(images/gladys.jpg)"
                     ></div>
                     <h3 class="mb-0 ml-2">Gladys</h3>
                   </a>
@@ -399,7 +399,7 @@
                   >
                     <div
                       class="img-2 rounded-circle"
-                      style="background-image: url(images/agent-1.jpg)"
+                      style="background-image: url(images/gladys.jpg)"
                     ></div>
                     <h3 class="mb-0 ml-2">Gladys</h3>
                   </a>
@@ -916,7 +916,7 @@
           <div class="col-md-3 ftco-animate">
             <div class="agent">
               <div class="img">
-                <img src="images/agent-1.jpg" class="img-fluid" alt="Agent" />
+                <img src="images/gladys.jpg" class="img-fluid" alt="Agent" />
               </div>
               <div class="desc">
                 <h3><a href="#agents">Gladys Karanja</a></h3>
