--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <div class="row justify-content-center">
           <div class="col-md-12 heading-section text-center ftco-animate mb-5">
             <span class="subheading">What we offer</span>
-            <h2 class="mb-2">Exclusive Offer For You</h2>
+            <h2 class="mb-2">Exclusive Offers For You</h2>
           </div>
         </div>
         <div class="row">
@@ -673,7 +673,7 @@
         <div class="row justify-content-center">
           <div class="col-md-12 heading-section text-center ftco-animate mb-5">
             <span class="subheading">Find Properties</span>
-            <h2 class="mb-2">Find Properties In Your City</h2>
+            <h2 class="mb-2">Find Properties in Nairobi</h2>
           </div>
         </div>
         <div class="row">
