--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <link rel="stylesheet" href="css/flaticon.css" />
     <link rel="stylesheet" href="css/icomoon.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles-0.css" />
   </head>
   <body>
     <nav
@@ -85,11 +85,7 @@
     </nav>
     <!-- END nav -->
 
-    <div
-      class="hero-wrap"
-      style="background-image: url('images/bg_0.jpg')"
-      data-stellar-background-ratio="0.5"
-    >
+    <div class="hero-wrap" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="overlay-2"></div>
       <div class="container">
