--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <link rel="stylesheet" href="css/flaticon.css" />
     <link rel="stylesheet" href="css/icomoon.css" />
-    <link rel="stylesheet" href="css/styles-0.css" />
+    <link rel="stylesheet" href="css/styles-1.css" />
   </head>
   <body>
     <nav
@@ -95,9 +95,7 @@
           <div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-end">
             <div class="text text-center w-100">
               <h1 class="mb-4 allison-regular">
-                <div style="color: #b07032; font-size: 100px">
-                  Affinity Homes
-                </div>
+                <div class="title">Affinity Homes</div>
                 <span style="font-family: Jost; font-size: 16px"
                   >For your valued property listings</span
                 >
